# cpp-mechanism-predictor

./: .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt
data/raw/: cpp_mechanism_dataset.csv
models/: mechanism_predictor.pkl
results/: comparison_text_for_manuscript.txt  leave_one_family_out.json  new_features_comparison.json
results/advanced_analysis_20260116_155844/: error_patterns.json  features_comparison.json  full_classification_analysis.csv  misclassified_peptides.csv
results/feature_selection_20260116_202303/: feature_selection_results.json
results/proper_nested_cv_20260116_202713/: proper_nested_cv_results.json
results/robust_validation_20260116_154819/: robust_validation_results.json
src/: __init__.py  advanced_analysis.py  compare_with_existing_tools.py  feature_selection_analysis.py  features.py  generate_roc_cm.py  predict.py  proper_nested_cv.py  robust_validation.py  test_asymmetry_hypothesis.py  train_mechanism.py
supplementary/: Table_S1_peptide_references.csv
tests/: test_features.py
