[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cppmechpred"
version = "1.1.0"
description = "Predicting Cell-Penetrating Peptide uptake mechanism from sequence"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Nabil Brag"},
]
keywords = ["cell-penetrating peptides", "machine learning", "bioinformatics", "peptide classification"]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "joblib>=1.1.0",
    "streamlit>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/Misterbra/cpp-mechanism-predictor"
Repository = "https://github.com/Misterbra/cpp-mechanism-predictor"

[tool.setuptools.packages.find]
include = ["src*"]
